--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-nes-py
-gym-super-mario-bros
-stable-baselines3[extra]
+nes-py==8.1.1
+gym==0.23.1
+gym-super-mario-bros==7.3.0
+stable-baselines3
+torch
+numpy
+opencv-python
+pyyaml
+tensorboard 
